<resources>
    <string name="app_name">SnsApp</string>

    <string name="header_sign_in">로그인</string>
    <string name="header_sign_up">가입</string>
    <string name="header_sign_out">로그아웃</string>
    
    <string name="home_tab_popular_card_title">인기 카드 : 카드를 클릭해보세요.</string>
    <string name="home_tab_popular_user_title">인기 유저 : 유저를 클릭해보세요.</string>

    <string name="photo_detail_recommend_title">추천 카드 : 카드를 클릭해보세요.</string>

    <string name="sign_in_nickname">닉네임</string>
    <string name="sign_in_password">비밀번호</string>
</resources>