<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.chul.presentation.signin.SignInViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <EditText
            android:id="@+id/sign_in_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_nickname"
            android:inputType="text"
            android:text="@={viewModel.id}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"
            android:text="@={viewModel.pwd}"
            app:layout_constraintTop_toBottomOf="@id/sign_in_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_sign_in"
            android:onClick="@{() -> viewModel.login()}"
            app:layout_constraintTop_toBottomOf="@id/sign_in_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>